--- a/client/src/components/instrument/list/list.component.html
+++ b/client/src/components/instrument/list/list.component.html
@@ -10,13 +10,15 @@
             </div>
             <img class="card-img instrument-type" data-src="{{ 'dist/images/' + instrument.relationships.instrumentType.data.attributes.icon }}" alt="Card image cap" />
 
-            <button type="button" class="card-btn-left btn btn-sm btn-secondary-outline">
-                <span class="fa fa-fw fa-check"></span>
-            </button>
+            <div class="card-btns">
+                <button type="button" class="card-btn btn btn-secondary">
+                    <span class="fa fa-fw fa-check"></span>
+                </button>
 
-            <button type="button" class="card-btn-right btn btn-sm btn-secondary-outline">
-                <span class="fa fa-fw fa-trash-o"></span>
-            </button>
+                <button type="button" class="card-btn btn btn-secondary">
+                    <span class="fa fa-fw fa-trash-o text-danger"></span>
+                </button>
+            </div>
         </a>
     </div>
 </div>
