[Client] implements tuner component (WIP)

--- a/client/src/components/tuning/tuner/tuner.component.html
+++ b/client/src/components/tuning/tuner/tuner.component.html
@@ -1,1 +1,40 @@
+<div class="card tuner">
+    <!--<div class="card-header">
+        <span class="mu mu-tuning"></span>
+        My tuner
+    </div>-->
 
+    <div class="card-block tuner-block">
+        <div class="tuner-col tuner-notes">
+            <div class="tuner-cell">
+                <input type="text" class="form-control" name="" value="D" />
+            </div>
+
+            <div class="tuner-cell">
+                <input type="text" class="form-control" name="" value="A" />
+            </div>
+
+            <div class="tuner-cell">
+                <input type="text" class="form-control" name="" value="E" />
+            </div>
+        </div>
+
+        <div class="tuner-col tuner-headstock">
+            <canvas #tunerCanvas class="tuning-headstock"></canvas>
+        </div>
+
+        <div class="tuner-col tuner-notes">
+            <div class="tuner-cell">
+                <input type="text" class="form-control" name="" value="G" />
+            </div>
+
+            <div class="tuner-cell">
+                <input type="text" class="form-control" name="" value="B" />
+            </div>
+
+            <div class="tuner-cell">
+                <input type="text" class="form-control" name="" value="E" />
+            </div>
+        </div>
+    </div>
+</div>
