--- a/client/src/components/dashboard/dashboard.component.html
+++ b/client/src/components/dashboard/dashboard.component.html
@@ -2,4 +2,10 @@
     <h1 class="content-header">
         Dashboard
     </h1>
+
+    <div class="row">
+        <div class="col-md-5">
+            <tuner></tuner>
+        </div>
+    </div>
 </div>
