[Client] updates styles

--- a/client/styles/components/common/_header.scss
+++ b/client/styles/components/common/_header.scss
@@ -20,9 +20,12 @@ ui-header {
     }
 
     .header-menu-block {
+      display: table;
+      height: 100%;
+
       .header-menu {
-        display: inline-block;
-        vertical-align: middle;
+        display: table-cell;
+        height: 100%;
       }
     }
   }
