--- a/client/styles/components/instrument/menu.scss
+++ b/client/styles/components/instrument/menu.scss
@@ -1,3 +1,10 @@
-.instrument-menu {
+instrument-menu {
+  .instrument-type {
+    height: 48px;
+  }
 
+  .dropdown-menu {
+    border: none;
+    margin-top: 0;
+  }
 }
