--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -33,7 +33,7 @@ $gray-light:                #818a91 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$brand-primary:             rgb(49, 112, 143) !default;
+$brand-primary:             #31708F !default;
 $brand-success:             #5cb85c !default;
 $brand-info:                #5bc0de !default;
 $brand-warning:             #f0ad4e !default;
