--- a/client/styles/components/app.scss
+++ b/client/styles/components/app.scss
@@ -73,8 +73,8 @@ music-tools {
   box-shadow: $content-shadow;
 
   .content-header {
-    border-top: 1px solid #094867;
-    color: #094867;
+    border-top: 1px solid $brand-primary;
+    color: $brand-primary;
     font-size: 1.3rem;
     font-variant: small-caps;
     font-weight: 900;
