--- a/client/styles/components/app.scss
+++ b/client/styles/components/app.scss
@@ -20,6 +20,10 @@ input[type=reset] {
   outline: 0 !important;
 }
 
+a {
+  cursor: pointer;
+}
+
 music-tools {
   background: url("../images/background.jpg") repeat scroll center top;
 
