--- a/client/src/components/instrument/menu/menu.component.html
+++ b/client/src/components/instrument/menu/menu.component.html
@@ -1,23 +1,16 @@
 <div class="dropdown" [ngClass]="{open: opened}" *ngIf="current" (onClickOut)="opened = false">
     <a class="dropdown-toggle" role="button" id="instrumentDropdown" aria-haspopup="true" (click)="opened = !opened">
-        <span *ngIf="!current">no selected instrument</span>
-
-        <span *ngIf="current">
-            <img class="instrument-type"
-                 alt="Instrument icon"
-                 src=""
-                 [src]="'dist/images/' + current.relationships.instrumentType.data.attributes.icon" />
-            {{ current.attributes.name }}
-        </span>
+        <instrument-item [instrument]="current"></instrument-item>
     </a>
 
     <div class="dropdown-menu" aria-labelledby="instrumentDropdown">
-        <a class="dropdown-item" href="" (click)="selectInstrument(instrument)" *ngFor="let instrument of instruments">
-            <img class="instrument-type"
-                 alt="Instrument icon"
-                 src=""
-                 [src]="'dist/images/' + instrument.relationships.instrumentType.data.attributes.icon" />
-            {{ instrument.attributes.name }}
+        <a class="dropdown-item" (click)="selectInstrument(instrument)" *ngFor="let instrument of instruments">
+            <instrument-item [instrument]="instrument"></instrument-item>
+        </a>
+
+        <a class="btn btn-link text-center" (click)="selectInstrument(instrument)">
+            <span class="fa fa-plus"></span>
+            add an instrument
         </a>
     </div>
 </div>
