--- a/client/styles/components/common/_header.scss
+++ b/client/styles/components/common/_header.scss
@@ -26,6 +26,12 @@ ui-header {
       .header-menu {
         display: table-cell;
         height: 100%;
+
+        border-right: 2px solid rgba(255, 255, 255, 0.05);
+
+        &:last-child {
+          border-right: none;
+        }
       }
     }
   }
