--- a/client/styles/components/instrument/menu.scss
+++ b/client/styles/components/instrument/menu.scss
@@ -1,10 +1,40 @@
 instrument-menu {
-  .instrument-type {
-    height: 48px;
-  }
+  .dropdown {
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
 
-  .dropdown-menu {
-    border: none;
-    margin-top: 0;
+    .dropdown-toggle {
+      display: inline-block;
+      height: 100%;
+
+      instrument-item {
+        height: 100%;
+      }
+
+      &:after {
+        content: none;
+      }
+
+      &:hover,
+      &:focus {
+        text-decoration: none;
+      }
+    }
+
+    .dropdown-menu {
+      border: none;
+      margin-top: 0;
+      padding: 0;
+
+      .dropdown-item {
+        padding: 0;
+        margin-top: 1px;
+
+        instrument-item {
+          width: 100%;
+        }
+      }
+    }
   }
 }
