[Client] changes instrument menu bg

--- a/client/styles/components/instrument/menu.scss
+++ b/client/styles/components/instrument/menu.scss
@@ -23,6 +23,7 @@ instrument-menu {
     }
 
     .dropdown-menu {
+      background: $header-menu-bg;
       border: none;
       margin-top: 0;
       padding: 0;
