--- a/client/src/components/user/menu/menu.component.html
+++ b/client/src/components/user/menu/menu.component.html
@@ -7,9 +7,9 @@
     <div class="user-menu-header">Elorfin</div>
 
     <a class="user-menu-item"
-       [routerLink]="[ '/dashboard' ]"
+       [routerLink]="[ '/' ]"
        [routerLinkActive]="['router-link-active']"
-       [routerLinkActiveOptions]="{exact: false}">
+       [routerLinkActiveOptions]="{exact: true}">
         <span class="fa fa-fw fa-dashboard"></span>
         dashboard
     </a>
