--- a/client/styles/components/app.scss
+++ b/client/styles/components/app.scss
@@ -2,7 +2,8 @@ body,
 html,
 music-tools,
 .app,
-.content-container{
+.app-container,
+.content-container {
   display: block;
   position: relative;
   height: 100%;
