--- a/client/styles/components/theory/note/input.scss
+++ b/client/styles/components/theory/note/input.scss
@@ -4,13 +4,13 @@ note-input {
 
   .note {
     margin: 0 auto;
-    width: 2.5em;
+    /*width: 2.5em;*/
     height: 2.5em;
     line-height: 1.75;
     text-align: center;
     /*vertical-align: middle;*/
     color: $gray;
-    border-radius: 50%;
+    border-radius: 2.5em;
     padding: $btn-padding-y;
 
     background: rgba(255, 255, 255, 0.05);
@@ -18,6 +18,7 @@ note-input {
     font-weight: bold;
 
     font-size: $font-size-base;
+    cursor: pointer;
   }
 
   .btn {
@@ -25,10 +26,11 @@ note-input {
     display: block;
     background: none;
 
+    &:active,
     &:hover,
     &:focus {
       background: none;
-      color: $gray-dark;
+      color: $gray;
     }
   }
 }
