--- a/client/src/components/dashboard/dashboard.component.html
+++ b/client/src/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-md-5">
-            <tuner></tuner>
+            <tuner [instrument]="instrument"></tuner>
         </div>
     </div>
 </div>
